# Live-Cell-Calcium-Imaging-Analysis-Pipeline

./: .gitattributes  .gitignore  README.md
cli/: run_analysis.py
configs/: config_demo.yaml  config_example.yaml
demo/: README.md  README_demo.md  analyse.py
demo/cellprofiler_outputs/20251001_mt_cyt_Ex_NCRM1/: MyExpt_CellDisk.csv  MyExpt_Experiment.csv  MyExpt_Image.csv  MyExpt_PositiveCells_mt.csv  MyExpt_PositiveCells_other.csv
demo/images/20251001_mt_cyt_Ex_NCRM1/C1-stack_Ex1/: C1-stack0001.tif  C1-stack0002.tif  C1-stack0003.tif  C1-stack0004.tif  C1-stack0005.tif  C1-stack0007.tif  C1-stack0011.tif  C1-stack0013.tif  C1-stack0014.tif  C1-stack0016.tif  C1-stack0021.tif  C1-stack0022.tif  C1-stack0023.tif  C1-stack0024.tif  C1-stack0025.tif  C1-stack0026.tif  C1-stack0028.tif  C1-stack0029.tif  C1-stack0030.tif  C1-stack0033.tif  C1-stack0034.tif  C1-stack0036.tif  C1-stack0037.tif  C1-stack0038.tif  C1-stack0040.tif  C1-stack0042.tif  C1-stack0044.tif  C1-stack0054.tif  (+2 more)
figures/: README.md
pipeline/: README.md
pipeline/analysis/: pyproject.toml  requirements.txt  run_analysis.py
pipeline/analysis/configs/: config_example.yaml
pipeline/analysis/src/analysis_core/: core.py  figures.py
pipeline/analysis/src/ca_trigger/: analysis_core.py
pipeline/cellprofiler/: calcium_imaging_pipeline_Fib.cpproj  quality_control_pipeline.cpproj
pipeline/preprocessing/: run_cellprofiler_batch.sh  run_demo_full.sh
pipelines/projects/: Ca2_Trigger_pipeline_NPC.cpproj
scripts/: export_lif_to_sequences.ijm  run_cellprofiler_batch.sh
src/ca_trigger/: figures.py
(+154 files in other folders)
