[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "live-cell-calcium-imaging-analysis"
version = "1.0.0"
description = "Analysis pipeline for live-cell calcium imaging"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
